# agentic-drop-zones

./: .env.sample  .gitignore  README.md  drops.yaml  pyproject.toml  requirements.txt  sfs_agentic_drop_zone.py  start.sh  stop.sh  test_multi_images.txt
.claude/commands/: create_image.md
docs/: CLAUDE.md  agentic_drop_zone_flow_diagram.md  enhanced_logging_and_monitoring.md  system_architecture_and_agent_integration.md
example_input_files/: test_finance.csv  test_image_fix.txt  test_images.txt  test_training_data.csv
tools/: README.md  vertex_ai_image_generator.py
